# apriltags_rgbd

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: tags.yaml  testbed_kinect.yaml
csrc/: .CMakeLists.txt.swp  CMakeLists.txt
csrc/cmake/: FindEIGEN3.cmake
csrc/src/: bayesPlane.cpp  bayesPlane.h  plane.cpp  plane.h
data/: apriltag_info.txt  apriltag_info2.txt
data/iros_data/: apriltag_info_0001.txt  apriltag_info_0001.txt~  apriltag_info_0002.txt  apriltag_info_0003.txt  apriltag_info_0004.txt  apriltag_info_0005.txt  apriltag_info_0006.txt  apriltag_info_0007.txt  apriltag_info_0008.txt  apriltag_info_0009.txt  apriltag_info_0010.txt  apriltag_info_0011.txt  apriltag_info_0012.txt  apriltag_info_0013.txt  apriltag_info_0014.txt  apriltag_info_0015.txt  apriltag_info_0016.txt  apriltag_info_0018.txt  apriltag_info_0022.txt
data/iros_data2/: apriltag_info_0000.txt  apriltag_info_0006.txt  apriltag_info_0007.txt  apriltag_info_0008.txt  apriltag_info_0011.txt  apriltag_info_0012.txt  apriltag_info_0013.txt  apriltag_info_0014.txt  apriltag_info_0016.txt  apriltag_info_0017.txt  apriltag_info_0019.txt  apriltag_info_0020.txt  apriltag_info_0021.txt
data/iros_data3/: apriltag_info_0007.txt  apriltag_info_0008.txt  apriltag_info_0009.txt  apriltag_info_0010.txt  apriltag_info_0011.txt  apriltag_info_0012.txt  apriltag_info_0013.txt  apriltag_info_0014.txt  apriltag_info_0015.txt  apriltag_info_0016.txt  apriltag_info_0017.txt
data/iros_data4/: apriltag_info_0006.txt  apriltag_info_0007.txt  apriltag_info_0008.txt  apriltag_info_0009.txt  apriltag_info_0010.txt  apriltag_info_0011.txt  apriltag_info_0012.txt  apriltag_info_0013.txt  apriltag_info_0014.txt  apriltag_info_0015.txt  apriltag_info_0015.txt~  apriltag_info_0016.txt  apriltag_info_0017.txt
data/iros_results/: rotation_error
data/rawData/: apriltags(1).txt  apriltags.txt
experiment/: tag_groundtruth.py
experiment/chessboard/: board_aptag_info
launch/: bringup.launch  continuous_detection.launch
msg/: LabeledPointArray.msg  LabeledPointCloud.msg
paper/: DTF1.pptx
paper/experiment/: tag_groundtruth.py
scripts/: apriltags_rgbd_node.py  body_pose_estimation_node.py  corner_filter.py  tag_detection_filter.py
scripts/apriltags_rgbd/: LM_minimize.py  bayesplane.py  experiment.py  plane.py  (+6 more)
src/: LM_minimize.py  bayesplane.py  collect_corner.py  depthNtagFusion.py  experiment.py  experiment2.py  experiment3.py  extract_depth_points.py  fitexample.py  homographyUncertainty.py  image_capture.py  plane.py  recompute_extrinsics.py  rgb_depth_fuse.py  rigid_transform.py  transformation.py
(+19 files in other folders)
