<?xml version="1.0"?>
<package format="2">
  <name>apriltags_rgbd</name>
  <version>0.0.0</version>
  <description>Package for fusing rgb and depth camera info to estimate
    apriltag poses</description>

  <maintainer email="aphung@mit.edu">Amy Phung</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>apriltag_msgs</depend>
  <depend>apriltag_ros</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

</package>
